--- a/production/index.html
+++ b/production/index.html
@@ -329,7 +329,7 @@
 
                 <div class="col-md-9 col-sm-9 col-xs-12">
                   <!--<div id="chart_plot_01" class="demo-placeholder"></div>-->
-                  <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-133419_1702460979?asIframe" height= 100% width= 100% ></iframe>
+                  <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-133419_1702460979?asIframe" height= "500px" width="500" ></iframe>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 bg-white">
                   <div class="x_title">
