--- a/production/index.html
+++ b/production/index.html
@@ -327,7 +327,7 @@
                   </div>
                 </div>
 
-                <div class="col-md-9 col-sm-9 col-xs-12">
+                <div class="col-md-9 col-sm-9 col-xs-12" stye="overflow:hidden">
                   <!--<div id="chart_plot_01" class="demo-placeholder"></div>-->
                   <div class="demo-placeholder" stye="overflow:hidden">
                     <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-133419_1702460979?asIframe" style="width: 100%; height: 100%; border: none; margin: 0; padding: 0; display: block; overflow:hidden;" ></iframe>
