--- a/production/index.html
+++ b/production/index.html
@@ -331,8 +331,9 @@
                   <!--<div id="chart_plot_01" class="demo-placeholder"></div>-->
                   <div class="demo-placeholder">
                     <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-133419_1702460979?asIframe" frameborder="0" 
+                    scrolling="no"
                     style="overflow:hidden; 
-                    display:block; position: absolute; height: 100%; width: 100%" ></iframe>
+                    display:block; position: absolute; height: 100%; width: 100%;" ></iframe>
                   </div>
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12 bg-white">
