--- a/production/index.html
+++ b/production/index.html
@@ -35,7 +35,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><img src="images/logo.png" width="50" height="50"></i> <span>HPC - LAB</span></a>
+              <a href="index.html" class="site_title"><img src="images/logo.png" width="45" height="45"></i> <span>HPC - LAB</span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -188,7 +188,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/logo.png" alt="">HPC - BK
+                    <img src="images/bk1.png" alt="">HPC - BK
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
