--- a/production/index.html
+++ b/production/index.html
@@ -317,7 +317,7 @@
 
                 <div class="row x_title">
                   <div class="col-md-6">
-                    <h3>Network Activities <small>Graph title sub-title</small></h3>
+                    <h3>Daily Activities <small>Data collected daily</small></h3>
                   </div>
                   <div class="col-md-6">
                     <div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
@@ -330,7 +330,7 @@
                 <div class="col-md-9 col-sm-9 col-xs-12">
                   <!--<div id="chart_plot_01" class="demo-placeholder"></div>-->
                   <div class="demo-placeholder">
-                    <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20170616-133419_1702460979?asIframe" frameborder="0" 
+                    <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20171024-151034_209728739?asIframe" frameborder="0" 
                     scrolling="no"
                     style="overflow:hidden; 
                     display:block; position: absolute; height: 100%; width: 100%;" ></iframe>
@@ -342,41 +342,11 @@
                     <div class="clearfix"></div>
                   </div>
 
-                  <div class="col-md-12 col-sm-12 col-xs-6">
-                    <div>
-                      <p>Facebook Campaign</p>
-                      <div class="">
-                        <div class="progress progress_sm" style="width: 76%;">
-                          <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="80"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div>
-                      <p>Twitter Campaign</p>
-                      <div class="">
-                        <div class="progress progress_sm" style="width: 76%;">
-                          <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="60"></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-12 col-sm-12 col-xs-6">
-                    <div>
-                      <p>Conventional Media</p>
-                      <div class="">
-                        <div class="progress progress_sm" style="width: 76%;">
-                          <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="40"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div>
-                      <p>Bill boards</p>
-                      <div class="">
-                        <div class="progress progress_sm" style="width: 76%;">
-                          <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="50"></div>
-                        </div>
-                      </div>
-                    </div>
+                  <div class="col-md-3 col-sm-3 col-xs-12">
+                    <iframe src="http://192.168.1.98:2017/#/notebook/2CWN9DCQG/paragraph/20171024-173147_186460202?asIframe" frameborder="0" 
+                    scrolling="no"
+                    style="overflow:hidden; 
+                    display:block; position: absolute; height: 100%; width: 100%;" ></iframe>
                   </div>
 
                 </div>
